src/testsuite/single/tests/compiler/fail/bad_return.c
TYPETEST

void foo() {
    return 1;
}
